# oraC

./: .gitignore  CMakeLists.txt  LICENSE  main.c  run.bat  test.bat
include/: linkedlist.h  vector.h  vstring.h
oraC/: CMakeLists.txt
oraC/include/: intvector.h  rc.h  utils.h  vector.h  vstring.h
oraC/src/: intvector.c  rc.c  utils.c  vector.c  vstring.c
src/: intvector.c  linkedlist.c  utils.c  vector.c  vstring.c
template/: run.bat
tests/: test_vector.c
